# zortex-mt8168-recovery-suite

./: LICENSE  MILESTONE_ELITE_MANIFEST.json  MILESTONE_MANIFEST.json  MILESTONE_SDK_DASHBOARD_MANIFEST.json  README.md  ZORTEX_V1_2_MILESTONE_COMMANDS.txt  ZORTEX_V2_MILESTONE_COMMANDS.txt  install_elite_milestone.sh  install_sdk_dashboard_milestone.sh  pyproject.toml
.github/workflows/: ci.yml
artifacts/: device_inventory.json  evidence_timeline.jsonl  pipeline-report.json  provenance_graph.json
artifacts/orchestrator/: hashes.json
dashboard/: index.html
dashboard/reports/: dashboard.json  dashboard.md  index.html
docs/: ELITE_DIAGNOSTICS_MILESTONE.md  POLICY_SIMULATION_MILESTONE.md  SDK_DASHBOARD_MILESTONE.md
docs/dashboard/: README.md
docs/graph/: README.md
docs/orchestrator/: README.md
docs/pipeline/: README.md
docs/reference-stack/: README.md
docs/rom-analysis/: README.md
knowledge/: device_profiles.json
knowledge/entries/: bd932b32f12709fe.json
reference-stack/reports/: audit.json
reports/: score-711-report.html  score-711-report.json
schemas/: capabilities.json
scripts/: fetch_reference_sources.sh  reference_stack.py  rom_knowledge.py  zortex_all.sh  zortex_dashboard.py  zortex_elite.py  zortex_graph.py  zortex_orchestrator.py  zortex_pipeline.py  zortex_policy.py  zortex_sdk_dashboard.py
tests/: test_cli.py  test_dashboard.py  test_elite_diagnostics.py  test_graph.py  test_orchestrator.py  test_pipeline.py  test_policy_simulation.py  test_reference_stack.py  test_restoration_gate.py  test_rom_knowledge.py  test_sdk_dashboard.py
(+73 files in other folders)
