[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zortex-mt8168-recovery-suite"
version = "0.2.0"
description = "Backup-first diagnostics and recovery toolkit for MT8168 Android tablets"
requires-python = ">=3.10"

dependencies = [
    "click",
    "rich",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
zortex = "zortex.cli:main"
